accordion section alignment fix

--- a/src/pages/MainSection/MainSection.module.scss
+++ b/src/pages/MainSection/MainSection.module.scss
@@ -3,6 +3,10 @@
   margin: 0 auto;
   padding: 1.5rem 2rem;
 
+  @media (max-width: 456px) {
+    padding: 1.5rem 1rem;
+  }
+
   .descriptionContainer {
     max-width: 810px;
     padding: 3.5rem 0rem;
